--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "cloudinary": "^1.35.0",
+    "framer-motion": "^10.10.0",
     "next": "13.2.4",
+    "next-images": "^1.8.4",
+    "postcss-preset-env": "^8.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "8.37.0",
